# CadastrePersonnesMorales

./: README.md  accueil.py  main.py  page_par_nom.py  page_par_parcelle.py  page_par_siren.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_readme.md
.streamlit/: config.toml
CPM/: __init__.py
CPM/integrate_new_data/: integrate.py
CPM/retriever/: data_file_handler.py  data_folder_handler.py  retriever.py
EF_PPM/: __init__.py
EF_PPM/retriever/: data_file_handler.py  data_folder_handler.py  retriever.py
