[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.1", "setuptools-scm>=8.0", "pandas>=2", "numpy>=1.22.4", "openpyxl>=3", "streamlit>=1.52.2", "selenium", "webdriver-manager"]
build-backend = "setuptools.build_meta"

[project]
name = 'EF_PPM'
version = "1.0.0"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.0"
authors = [{name = "Antoine PETIT", email = "antoine.petit@energie-fonciere.fr"}, ]
dependencies = []

[tool.setuptools.package-data]
EF_PPM = ["*.csv", "*.txt"]
